--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <script src="./p5.min.js"></script>
-    <script src="object-practice.js"></script>
+    <script src="shapes.js"></script>
     <script src="modifiers.js"></script>
+    <script src="object-practice.js"></script>
   </head>
   <body style="background: rgb(20,90,150)">
   </body>
